# inference-server

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE_HEADER.txt  README.md  pyproject.toml  tox.ini
.github/workflows/: codeql.yml  release-package.yml  test-package.yml
docs/: batch_transform.rst  conf.py  deployment.rst  faq.rst  hooks.rst  index.rst  inference_server.rst  inference_server_testing.rst  introduction.rst  modules.rst  testing.rst
docs/_static/: custom.css
src/inference_server/: __init__.py  _plugin.py  default_plugin.py  py.typed  testing.py
tests/: test_inference_server.py
